# advent-of-code

./: .gitignore  Cargo.toml  Pipfile  README.md  build.zig  build.zig.zon  go.mod  pre-commit.py  pyproject.toml
2015/: README.md  solutions.txt
2015/golang/: README.md  instruction.go
2015/golang/day07/: instruction.go  main.go
2015/inputs/: sample05_2.txt  sample19.txt  sample25.txt
2015/rust/: main.rs
2015/rust/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
2016/: README.md  solutions.txt
2016/golang/: broker.go  instruction.go
2016/golang/day10/: instruction.go  main.go
2016/inputs/: sample04_2.txt  sample07_2.txt
2016/rust/: main.rs
2016/rust/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2017/: README.md  solutions.txt
2017/rust/: main.rs
2017/rust/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2018/: README.md  solutions.txt
2018/inputs/: sample04.txt
2018/rust/: main.rs
2018/rust/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2019/: README.md  solutions.txt
2019/rust/: main.rs
2019/rust/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  (+17 more)
2020/: README.md  solutions.txt
2020/rust/: main.rs
2021/: README.md  solutions.txt
2021/rust/: main.rs
2022/: README.md  solutions.txt
2022/rust/: main.rs
2023/: README.md  solutions.txt
2023/python/: main.py  solution.py
2023/rust/: main.rs  solution.rs
2024/: README.md  solutions.txt
2024/rust/: main.rs
2024/zig/: main.zig
2025/: README.md  solutions.txt
2025/elixir/: main.exs
2025/python/: main.py
lib/elixir/: aoc_lib.ex  runner.ex  solution.ex  types.ex  util.ex
lib/golang/: broker.go
lib/python/: __init__.py  runner.py  solution.py
lib/rust/: algebra.rs  algo.rs  aoc_lib.rs  cartesian.rs  grammar.rs  graph.rs  iterator.rs  math.rs  runner.rs  solution.rs  types.rs  util.rs
lib/zig/: aoc_lib.zig  cartesian.zig  graph.zig  runner.zig  solution.zig  types.zig  util.zig
scripts/: create_rust_day.sh  day.rs  day_template.rs  download_all_inputs.sh  download_inputs.sh  new_day.sh  new_year.sh  pre-commit.py  prep_new_year.sh  read_cookie.py  verify_results.sh
scripts/templates/: day_template.ex  day_template.rs  day_template.zig  main_template.rs
(+184 files in other folders)
