[package]
name = "adventofcode-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "main2023"
path = "2023/rust/main.rs"

[[bin]]
name = "main2020"
path = "2020/rust/main.rs"

[[bin]]
name = "main2019"
path = "2019/rust/main.rs"

[[bin]]
name = "main2018"
path = "2018/rust/main.rs"

[[bin]]
name = "main2017"
path = "2017/rust/main.rs"

[[bin]]
name = "main2016"
path = "2016/rust/main.rs"

[[bin]]
name = "main2015"
path = "2015/rust/main.rs"

[lib]
name = "aoc_lib"
path = "lib/rust/aoc_lib.rs"

[lints.clippy]
needless_range_loop = { level = "allow", priority = 0 }
never_loop = { level = "warn", priority = 0 }

[dependencies]
regex = "1"
itertools = "0.10.5"
md5 = "0.7.0"
rayon = "1.8.0"
num = { version = "0.4.1", features = ["num-bigint"] }
serde_json = "1.0.109"
