[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Marek Hummel <marek.hummel3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pulp = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-exclude = ["test/", "scripts/"]
line-length = 99

[tool.ruff.lint]
extend-select = ["F", "E", "W", "I", "N", "LOG", "SIM", "UP"]
extend-ignore = [
    "E203", # Whitespace before :
    "E741", # Allow usage of ambigious variable names (i, l, o)
    "E731", # Allow assignment of lambda function
    "SIM102", # Allow nested ifs, even though they could be merged with an AND
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"] # Allow unused and star imports in init files

[tool.mypy]
python_version = "3.12"
# Note: Multiple year directories have conflicting 'python' module names.
# Check each year separately: mypy lib 2023/python
#                         or: mypy lib 2025/python
# Use scripts/check_types.sh to check all years at once.

[[tool.mypy.overrides]]
module = ["pulp"]
ignore_errors = true
ignore_missing_imports = true
